zigbee2mqtt/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt-ingress
  namespace: zigbee2mqtt
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zigbee2mqtt.mangelschots.org`)
      kind: Rule
      services:
        - name: zigbee2mqtt-service
          port: 8080
  tls:
    secretName: zigbee2mqtt-mangelschots-org-tls
